--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -59,7 +59,7 @@ body {
     text-rendering: optimizeLegibility;
 }
 
-*:where(:not(html, iframe, canvas, img, svg, video, audio)) {
+*:where(:not(html, iframe, canvas, img, svg, path, video, audio)) {
     all: unset;
     display: revert;
 }
