--- a/assets/scss/components/_select.scss
+++ b/assets/scss/components/_select.scss
@@ -6,14 +6,10 @@
     max-width: 80px;
     min-width: 80px;
     position: relative;
-    display: inline-flex;
-    align-items: center;
+    position: relative;
     -webkit-tap-highlight-color: transparent;
     &__toggle {
         @include mixins.select;
-    }
-    &__icon {
-        @include mixins.icon;
     }
     &__list {
         @include mixins.droplist;
