--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ ol {
 
 a {
   text-decoration: none;
-  color: inherit;
 }
 
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box !important;
 }
 
 button {
@@ -58,6 +58,7 @@ p {
 body {
   min-height: 100vh;
   text-rendering: optimizeLegibility;
+  box-sizing: border-box !important;
 }
 
 *:where(:not(html, iframe, canvas, img, svg, path, video, audio)) {
@@ -319,7 +320,7 @@ h4 {
   font-weight: var(--h4-weight);
   line-height: var(--h4-line-height);
   letter-spacing: var(--h4-letter-spacing);
-  color: var(--color-neutral-700);
+  color: var(--color-primary-dark);
 }
 h4 {
   font-size: var(--h4-mobile);
@@ -914,7 +915,6 @@ html {
   letter-spacing: var(--nav-letter-spacing);
   color: var(--color-neutral-500);
   cursor: pointer;
-  width: 100%;
 }
 .mobile-nav__link {
   font-size: var(--nav-mobile);
@@ -969,6 +969,9 @@ html {
     gap: var(--btn-gap-mobile);
   }
 }
+.mobile-nav__link {
+  width: 100%;
+}
 .mobile-nav__actions {
   width: 100%;
   display: flex;
@@ -984,7 +987,6 @@ html {
   gap: var(--btn-gap-desktop);
   flex-shrink: 0;
   border-radius: 12px;
-  flex: 1;
 }
 @media (min-width: 1280px) and (max-width: 1279.9px) {
   .mobile-nav__login {
@@ -1036,6 +1038,9 @@ html {
   opacity: 0.3;
   cursor: not-allowed;
 }
+.mobile-nav__login {
+  flex: 1;
+}
 .mobile-nav__signup {
   display: flex;
   height: var(--btn-height-desktop);
@@ -1045,7 +1050,6 @@ html {
   gap: var(--btn-gap-desktop);
   flex-shrink: 0;
   border-radius: 12px;
-  flex: 1;
 }
 @media (min-width: 1280px) and (max-width: 1279.9px) {
   .mobile-nav__signup {
@@ -1101,6 +1105,9 @@ html {
   opacity: 0.3;
   cursor: not-allowed;
 }
+.mobile-nav__signup {
+  flex: 1;
+}
 
 .mobile-nav-overlay {
   position: fixed;
@@ -1123,26 +1130,23 @@ body.no-scroll {
 .header {
   display: flex;
   align-items: center;
-  padding: 24px;
-  margin: 0 var(--section-margin-desktop);
+  padding: 24px var(--section-margin-desktop);
   position: relative;
+  z-index: 999;
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .header {
     padding: 20px var(--section-margin-tablet);
-    margin: 0;
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
   .header {
     padding: 16px var(--section-margin-mobile);
-    margin: 0;
   }
 }
 @media (max-width: 464.9px) {
   .header {
     padding: 16px var(--section-margin-mobile);
-    margin: 0;
   }
 }
 .header__inner {
@@ -1319,10 +1323,529 @@ body.no-scroll {
   }
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gutter-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer {
+    gap: var(--gutter-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer {
+    gap: var(--gutter-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer {
+    gap: var(--gutter-mobile);
+  }
+}
+.footer__top {
+  display: grid;
+  grid-template-columns: 277px 1fr 277px;
+  grid-template-areas: "brand menu social";
+  gap: var(--gutter-desktop);
+  padding: var(--section-padding-desktop) var(--section-margin-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer__top {
+    grid-template-columns: 277px 1fr;
+    grid-template-areas: "brand social" "menu menu";
+    gap: var(--gutter-tablet);
+    padding: var(--section-padding-tablet) var(--section-margin-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer__top {
+    grid-template-columns: 1fr;
+    grid-template-areas: "brand" "menu" "social";
+    gap: var(--gutter-mobile);
+    padding: var(--section-padding-mobile) var(--section-margin-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer__top {
+    grid-template-columns: 1fr;
+    grid-template-areas: "brand" "menu" "social";
+    gap: var(--gutter-mobile);
+    padding: var(--section-padding-mobile) var(--section-margin-mobile);
+  }
+}
+.footer__col--brand {
+  grid-area: brand;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer__col--brand {
+    gap: var(--gap-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer__col--brand {
+    gap: var(--gap-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer__col--brand {
+    gap: var(--gap-mobile);
+  }
+}
+.footer__col--menu {
+  grid-area: menu;
+  display: flex;
+  align-items: flex-start;
+  gap: var(--gap-desktop);
+}
+@media (min-width: 1280px) and (max-width: 1279.9px) {
+  .footer__col--menu {
+    grid-area: 2;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer__col--menu {
+    gap: var(--gap-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer__col--menu {
+    flex-wrap: wrap;
+    gap: var(--gap-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer__col--menu {
+    flex-wrap: wrap;
+    gap: var(--gap-mobile);
+  }
+}
+.footer__col--social {
+  grid-area: social;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gutter-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer__col--social {
+    gap: var(--gutter-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer__col--social {
+    gap: var(--gutter-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer__col--social {
+    gap: var(--gutter-mobile);
+  }
+}
+.footer__desc {
+  font-family: var(--font-primary);
+  font-weight: var(--body2-weight);
+  line-height: var(--body2-line-height);
+  letter-spacing: var(--body2-letter-spacing);
+  color: var(--color-neutral-500);
+}
+.footer__desc {
+  font-size: var(--body2-mobile);
+}
+@media (min-width: 320px) {
+  .footer__desc {
+    font-size: calc(var(--body2-mobile) + (var(--body2-tablet) - var(--body2-mobile)) * (100vw - 320px) / (1440px - 320px));
+  }
+}
+@media (min-width: 1440px) {
+  .footer__desc {
+    font-size: var(--body2-desktop);
+  }
+}
+
+.footer-menu__group {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer-menu__group {
+    flex: 1 1 calc(50% - var(--gap-mobile));
+  }
+}
+@media (max-width: 464.9px) {
+  .footer-menu__group {
+    flex: 1 1 calc(50% - var(--gap-mobile));
+  }
+}
+.footer-menu__title {
+  font-family: var(--font-primary);
+  font-weight: var(--h4-weight);
+  line-height: var(--h4-line-height);
+  letter-spacing: var(--h4-letter-spacing);
+  color: var(--color-primary-dark);
+}
+.footer-menu__title {
+  font-size: var(--h4-mobile);
+}
+@media (min-width: 320px) {
+  .footer-menu__title {
+    font-size: calc(var(--h4-mobile) + (var(--h4-tablet) - var(--h4-mobile)) * (100vw - 320px) / (1440px - 320px));
+  }
+}
+@media (min-width: 1440px) {
+  .footer-menu__title {
+    font-size: var(--h4-desktop);
+  }
+}
+.footer-menu__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.footer-menu__item {
+  width: 100%;
+}
+.footer-menu__link {
+  display: flex;
+  padding: 4px 0;
+  gap: var(--btn-gap-desktop);
+  flex-shrink: 0;
+  border-radius: 12px;
+  font-family: var(--font-primary);
+  font-weight: var(--nav-weight);
+  line-height: var(--nav-line-height);
+  letter-spacing: var(--nav-letter-spacing);
+  color: var(--color-neutral-500);
+  cursor: pointer;
+}
+.footer-menu__link {
+  font-size: var(--nav-mobile);
+}
+@media (min-width: 320px) {
+  .footer-menu__link {
+    font-size: calc(var(--nav-mobile) + (var(--nav-tablet) - var(--nav-mobile)) * (100vw - 320px) / (1440px - 320px));
+  }
+}
+@media (min-width: 1440px) {
+  .footer-menu__link {
+    font-size: var(--nav-desktop);
+  }
+}
+.footer-menu__link:hover {
+  color: var(--color-accent-primary);
+}
+.footer-menu__link.active {
+  color: var(--color-primary-dark);
+  display: inline-block;
+  position: relative;
+}
+.footer-menu__link.active::before {
+  content: "";
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background: url(../img/ui/underline.svg) no-repeat center/contain;
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer-menu__link {
+    height: 40px;
+    gap: var(--btn-gap-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer-menu__link {
+    height: 36px;
+    gap: var(--btn-gap-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer-menu__link {
+    height: 36px;
+    gap: var(--btn-gap-mobile);
+  }
+}
+
+.footer-social__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: var(--gap-tablet);
+}
+.footer-social__inner--apps {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: var(--gap-tablet);
+}
+.footer-social__icons {
+  flex: 1;
+  height: -moz-max-content;
+  height: max-content;
+  display: flex;
+  gap: var(--gap-tablet);
+}
+.footer-social__link {
+  width: var(--icon-desktop);
+  height: var(--icon-desktop);
+  obkect-fit: contain;
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer-social__link {
+    width: var(--icon-tablet);
+    height: var(--icon-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer-social__link {
+    width: var(--icon-mobile);
+    height: var(--icon-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer-social__link {
+    width: var(--icon-mobile);
+    height: var(--icon-mobile);
+  }
+}
+.footer-social__link {
+  cursor: pointer;
+}
+.footer-social__top {
+  width: var(--icon-desktop);
+  height: var(--icon-desktop);
+  obkect-fit: contain;
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .footer-social__top {
+    width: var(--icon-tablet);
+    height: var(--icon-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .footer-social__top {
+    width: var(--icon-mobile);
+    height: var(--icon-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .footer-social__top {
+    width: var(--icon-mobile);
+    height: var(--icon-mobile);
+  }
+}
+.footer-social__stores {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  height: -moz-max-content;
+  height: max-content;
+  cursor: pointer;
+}
+.footer-social__label {
+  font-family: var(--font-primary);
+  font-weight: var(--h4-weight);
+  line-height: var(--h4-line-height);
+  letter-spacing: var(--h4-letter-spacing);
+  color: var(--color-primary-dark);
+}
+.footer-social__label {
+  font-size: var(--h4-mobile);
+}
+@media (min-width: 320px) {
+  .footer-social__label {
+    font-size: calc(var(--h4-mobile) + (var(--h4-tablet) - var(--h4-mobile)) * (100vw - 320px) / (1440px - 320px));
+  }
+}
+@media (min-width: 1440px) {
+  .footer-social__label {
+    font-size: var(--h4-desktop);
+  }
+}
+
+.copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dev {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  padding: 16px var(--section-margin-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .dev {
+    flex-wrap: wrap;
+    padding: 16px var(--section-margin-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .dev {
+    padding: 16px var(--section-margin-mobile);
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media (max-width: 464.9px) {
+  .dev {
+    padding: 16px var(--section-margin-mobile);
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+.dev {
+  background: var(--color-neutral-100);
+  filter: grayscale(1);
+}
+.dev__caption {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  text-align: center;
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .dev__caption {
+    flex: 1 1 100%;
+    order: 1;
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .dev__caption {
+    order: 1;
+  }
+}
+@media (max-width: 464.9px) {
+  .dev__caption {
+    order: 1;
+  }
+}
+.dev__inner {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+@media (min-width: 1280px) and (max-width: 1279.9px) {
+  .dev__inner {
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .dev__inner.platforms {
+    order: 2;
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .dev__inner.platforms {
+    order: 3;
+    text-align: center;
+  }
+}
+@media (max-width: 464.9px) {
+  .dev__inner.platforms {
+    order: 3;
+    text-align: center;
+  }
+}
+.dev__inner.networks {
+  align-items: flex-end;
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .dev__inner.networks {
+    order: 3;
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .dev__inner.networks {
+    order: 2;
+    text-align: center;
+  }
+}
+@media (max-width: 464.9px) {
+  .dev__inner.networks {
+    order: 2;
+    text-align: center;
+  }
+}
+.dev__title {
+  font-family: var(--font-primary);
+  font-weight: var(--caption-weight);
+  line-height: var(--caption-line-height);
+  letter-spacing: var(--caption-letter-spacing);
+  color: var(--color-neutral-500);
+}
+.dev__title {
+  font-size: var(--caption-mobile);
+}
+@media (min-width: 320px) {
+  .dev__title {
+    font-size: calc(var(--caption-mobile) + (var(--caption-tablet) - var(--caption-mobile)) * (100vw - 320px) / (1440px - 320px));
+  }
+}
+@media (min-width: 1440px) {
+  .dev__title {
+    font-size: var(--caption-desktop);
+  }
+}
+.dev__list {
+  display: flex;
+  align-items: center;
+  gap: var(--gap-tablet);
+}
+.dev__item {
+  width: auto;
+  height: 16px;
+}
+.dev__link {
+  width: auto;
+  height: 16px;
+  cursor: pointer;
+}
+.dev__logo {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 [hidden] {
   display: none;
 }
 
 body {
   background: var(--color-neutral-50);
+}
+
+.section {
+  padding: var(--section-padding-desktop) 0;
+  margin: 0 var(--section-margin-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .section {
+    padding: var(--section-padding-tablet) 0;
+    margin: 0 var(--section-margin-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .section {
+    padding: var(--section-padding-mobile) 0;
+    margin: 0 var(--section-margin-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .section {
+    padding: var(--section-padding-mobile) 0;
+    margin: 0 var(--section-margin-mobile);
+  }
 }
