--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,8 +423,8 @@ html {
 }
 
 .logo {
-  min-width: 120px;
-  max-width: 140px;
+  width: 140px;
+  height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -432,9 +432,8 @@ html {
 }
 .logo img {
   display: block;
-  width: 100%;
-  max-width: 140px;
-  height: auto;
+  width: 140px;
+  height: 30px;
   -webkit-user-drag: none;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -814,25 +813,33 @@ html {
 }
 .burger__icon {
   width: var(--icon-desktop);
+  min-width: var(--icon-desktop);
   height: var(--icon-desktop);
+  min-height: var(--icon-desktop);
   obkect-fit: contain;
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .burger__icon {
     width: var(--icon-tablet);
+    min-width: var(--icon-tablet);
     height: var(--icon-tablet);
+    min-height: var(--icon-tablet);
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
   .burger__icon {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 @media (max-width: 464.9px) {
   .burger__icon {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 
@@ -875,25 +882,33 @@ html {
   right: 16px;
   cursor: pointer;
   width: var(--icon-desktop);
+  min-width: var(--icon-desktop);
   height: var(--icon-desktop);
+  min-height: var(--icon-desktop);
   obkect-fit: contain;
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .mobile-nav__close {
     width: var(--icon-tablet);
+    min-width: var(--icon-tablet);
     height: var(--icon-tablet);
+    min-height: var(--icon-tablet);
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
   .mobile-nav__close {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 @media (max-width: 464.9px) {
   .mobile-nav__close {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 .mobile-nav__list {
@@ -1141,6 +1156,92 @@ body.no-scroll {
   overflow: hidden;
 }
 
+.tricker {
+  filter: grayscale(1) opacity(0.5);
+  padding: var(--section-padding-desktop) 0;
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .tricker {
+    padding: var(--section-padding-tablet) 0;
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .tricker {
+    padding: var(--section-padding-mobile) 0;
+  }
+}
+@media (max-width: 464.9px) {
+  .tricker {
+    padding: var(--section-padding-mobile) 0;
+  }
+}
+.tricker__inner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  margin-right: var(--gap-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .tricker__inner {
+    margin-right: var(--gap-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .tricker__inner {
+    margin-right: var(--gap-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .tricker__inner {
+    margin-right: var(--gap-mobile);
+  }
+}
+.tricker__content {
+  flex: 0 0 auto;
+  will-change: transform;
+  animation: tricker 15s linear infinite;
+}
+.tricker__list {
+  display: flex;
+  align-items: center;
+}
+.tricker__logo {
+  width: 190px;
+  height: 60px;
+  margin-right: var(--gap-desktop);
+}
+@media (min-width: 768px) and (max-width: 1279.9px) {
+  .tricker__logo {
+    margin-right: var(--gap-tablet);
+  }
+}
+@media (min-width: 465px) and (max-width: 767.9px) {
+  .tricker__logo {
+    margin-right: var(--gap-mobile);
+  }
+}
+@media (max-width: 464.9px) {
+  .tricker__logo {
+    margin-right: var(--gap-mobile);
+  }
+}
+.tricker__img {
+  width: 190px;
+  height: 60px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@keyframes tricker {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 .header {
   display: flex;
   align-items: center;
@@ -1362,14 +1463,12 @@ body.no-scroll {
   grid-template-columns: 277px 1fr 277px;
   grid-template-areas: "brand menu social";
   gap: var(--gutter-desktop);
-  padding: var(--section-padding-desktop) var(--section-margin-desktop);
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .footer__top {
     grid-template-columns: 277px 1fr;
     grid-template-areas: "brand social" "menu menu";
     gap: var(--gutter-tablet);
-    padding: var(--section-padding-tablet) var(--section-margin-tablet);
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
@@ -1377,7 +1476,6 @@ body.no-scroll {
     grid-template-columns: 1fr;
     grid-template-areas: "brand" "menu" "social";
     gap: var(--gutter-mobile);
-    padding: var(--section-padding-mobile) var(--section-margin-mobile);
   }
 }
 @media (max-width: 464.9px) {
@@ -1385,7 +1483,6 @@ body.no-scroll {
     grid-template-columns: 1fr;
     grid-template-areas: "brand" "menu" "social";
     gap: var(--gutter-mobile);
-    padding: var(--section-padding-mobile) var(--section-margin-mobile);
   }
 }
 .footer__col--brand {
@@ -1619,25 +1716,33 @@ body.no-scroll {
 }
 .footer-social__link {
   width: var(--icon-desktop);
+  min-width: var(--icon-desktop);
   height: var(--icon-desktop);
+  min-height: var(--icon-desktop);
   obkect-fit: contain;
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .footer-social__link {
     width: var(--icon-tablet);
+    min-width: var(--icon-tablet);
     height: var(--icon-tablet);
+    min-height: var(--icon-tablet);
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
   .footer-social__link {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 @media (max-width: 464.9px) {
   .footer-social__link {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 .footer-social__link {
@@ -1645,25 +1750,33 @@ body.no-scroll {
 }
 .footer-social__top {
   width: var(--icon-desktop);
+  min-width: var(--icon-desktop);
   height: var(--icon-desktop);
+  min-height: var(--icon-desktop);
   obkect-fit: contain;
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .footer-social__top {
     width: var(--icon-tablet);
+    min-width: var(--icon-tablet);
     height: var(--icon-tablet);
+    min-height: var(--icon-tablet);
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
   .footer-social__top {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 @media (max-width: 464.9px) {
   .footer-social__top {
     width: var(--icon-mobile);
+    min-width: var(--icon-mobile);
     height: var(--icon-mobile);
+    min-height: var(--icon-mobile);
   }
 }
 .footer-social__stores {
@@ -1851,12 +1964,23 @@ body.no-scroll {
   align-items: center;
   gap: var(--gap-tablet);
 }
-.dev__item {
-  width: auto;
+.dev__list--platforms .dev__item {
+  width: -moz-max-content;
+  width: max-content;
   height: 16px;
 }
-.dev__link {
-  width: auto;
+.dev__list--platforms .dev__link {
+  width: -moz-max-content;
+  width: max-content;
+  height: 16px;
+  cursor: pointer;
+}
+.dev__list--networks .dev__item {
+  width: 16px;
+  height: 16px;
+}
+.dev__list--networks .dev__link {
+  width: 16px;
   height: 16px;
   cursor: pointer;
 }
@@ -1876,24 +2000,32 @@ body {
 }
 
 .section {
-  padding: var(--section-padding-desktop) 0;
-  margin: 0 var(--section-margin-desktop);
+  padding: var(--section-padding-desktop) var(--section-margin-desktop);
 }
 @media (min-width: 768px) and (max-width: 1279.9px) {
   .section {
-    padding: var(--section-padding-tablet) 0;
-    margin: 0 var(--section-margin-tablet);
+    padding: var(--section-padding-tablet) var(--section-margin-tablet);
   }
 }
 @media (min-width: 465px) and (max-width: 767.9px) {
   .section {
-    padding: var(--section-padding-mobile) 0;
-    margin: 0 var(--section-margin-mobile);
+    padding: var(--section-padding-mobile) var(--section-margin-mobile);
   }
 }
 @media (max-width: 464.9px) {
   .section {
-    padding: var(--section-padding-mobile) 0;
-    margin: 0 var(--section-margin-mobile);
+    padding: var(--section-padding-mobile) var(--section-margin-mobile);
   }
+}
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
 }
